--- a/sshvrpronto.html
+++ b/sshvrpronto.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Seleção Simplificada — Formulário</title>
+    <title>Secretaria de Administração - SAD — Seleção Simplificada Hospital Veterinário do Recife</title>
+    <link
+      rel="icon"
+      href="https://statics.recife.pe.gov.br/images/dynamics/conecta/icons/favicon.png?w=32&amp;h=32&amp;fit=fill&amp;border=2,transparent,shrink"
+    />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,6 +62,20 @@
         margin: 0 auto;
         padding-left: 1.5rem;
         padding-right: 1.5rem;
+      }
+
+      .badge-open {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 0.35rem 0.75rem;
+        border-radius: 4px;
+        border: 1px solid rgba(255, 255, 255, 0.35);
+        background: rgba(255, 255, 255, 0.16);
+        color: #ffffff;
+        font-weight: 600;
+        letter-spacing: 0.04em;
+        font-size: 0.7rem;
       }
 
       header .lead {
@@ -129,7 +147,7 @@
 
       .wizard-shell {
         background: var(--surface);
-        border-radius: 1.25rem;
+        border-radius: 4px;
         padding: 1.75rem 1.5rem;
         box-shadow: 0 18px 40px rgba(26, 115, 232, 0.12), 0 8px 22px rgba(26, 115, 232, 0.08);
         border: 1px solid rgba(26, 115, 232, 0.12);
@@ -163,7 +181,7 @@
         align-items: flex-start;
         justify-content: center;
         padding: 0.6rem 1rem;
-        border-radius: 0.75rem;
+        border-radius: 4px;
         background: rgba(26, 115, 232, 0.12);
         color: #0b2447;
         font-size: 0.85rem;
@@ -296,7 +314,7 @@
 
       .step-card {
         border: 0;
-        border-radius: 1.25rem;
+        border-radius: 4px;
         overflow: hidden;
         box-shadow: 0 20px 44px rgba(15, 23, 42, 0.08);
         margin-bottom: 2.5rem;
@@ -398,7 +416,7 @@
 
       .summary-section {
         border: 1px solid rgba(26, 115, 232, 0.08);
-        border-radius: 1rem;
+        border-radius: 4px;
         padding: 1.25rem 1.5rem;
         margin-bottom: 1.25rem;
         background: #ffffff;
@@ -433,7 +451,7 @@
 
       .dropzone {
         border: 2px dashed rgba(26, 115, 232, 0.25);
-        border-radius: 1rem;
+        border-radius: 4px;
         padding: 1rem 1.25rem;
         background: rgba(232, 240, 254, 0.55);
         color: #34518a;
@@ -445,7 +463,7 @@
 
       .upload-card {
         border: 2px dashed rgba(17, 37, 82, 0.18);
-        border-radius: 1rem;
+        border-radius: 4px;
         background: rgba(255, 255, 255, 0.75);
         padding: 1.5rem 1.25rem;
         min-height: var(--upload-min-height);
@@ -533,7 +551,7 @@
         max-width: 720px;
         text-align: center;
         background: var(--surface);
-        border-radius: 1.25rem;
+        border-radius: 4px;
         padding: 3rem 2.5rem;
         box-shadow: 0 18px 40px rgba(26, 115, 232, 0.12), 0 8px 22px rgba(26, 115, 232, 0.08);
         border: 1px solid rgba(26, 115, 232, 0.12);
@@ -572,7 +590,7 @@
         background: #0f5132;
         color: #fff;
         padding: 0.85rem 1.25rem;
-        border-radius: 0.75rem;
+        border-radius: 4px;
         box-shadow: 0 20px 45px rgba(15, 81, 50, 0.35);
         display: none;
         align-items: center;
@@ -636,7 +654,7 @@
   <body>
     <header class="site-header">
       <div class="container">
-        <span class="badge-open">Secretaria de Administração e Gestão de Pessoas - SADGP • Recife</span>
+        <span class="badge-open">Secretaria de Administração - SAD • Prefeitura do Recife</span>
         <h1 class="display-6 fw-semibold mt-3">Seleção Simplificada Hospital Veterinário do Recife</h1>
         <p class="lead mt-2">
           Inscrições abertas até 23:59:59 do dia 31 de outubro de 2025
