--- a/sshvrpronto.html
+++ b/sshvrpronto.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
+      href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
@@ -55,6 +59,7 @@
         background: linear-gradient(135deg, rgba(0, 83, 164, 0.96), rgba(0, 58, 115, 0.88));
         color: #ffffff;
         padding: 3.5rem 0 2.75rem;
+        font-family: "Public Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       }
 
       header.site-header .container {
@@ -62,25 +67,67 @@
         margin: 0 auto;
         padding-left: 1.5rem;
         padding-right: 1.5rem;
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+      }
+
+      .site-header .hero-copy {
+        display: flex;
+        flex-direction: column;
+        gap: 1.1rem;
+        max-width: 780px;
       }
 
       .badge-open {
         display: inline-flex;
         align-items: center;
         gap: 0.5rem;
-        padding: 0.35rem 0.75rem;
-        border-radius: 4px;
+        padding: 0.45rem 0.9rem;
+        border-radius: 999px;
         border: 1px solid rgba(255, 255, 255, 0.35);
-        background: rgba(255, 255, 255, 0.16);
+        background: rgba(255, 255, 255, 0.14);
         color: #ffffff;
         font-weight: 600;
         letter-spacing: 0.04em;
-        font-size: 0.7rem;
+        font-size: 0.95rem;
       }
 
-      header .lead {
+      .site-header__title {
+        margin: 0;
+        font-weight: 700;
+        font-size: clamp(2rem, 2.8vw + 0.75rem, 2.9rem);
+        line-height: 1.18;
+      }
+
+      .site-header .lead {
+        margin: 0;
         color: rgba(255, 255, 255, 0.82);
-        max-width: 720px;
+        font-size: 1rem;
+        line-height: 1.65;
+        text-align: justify;
+        max-width: 100%;
+      }
+
+      @media (max-width: 768px) {
+        header.site-header {
+          padding: 2.5rem 0 2rem;
+        }
+
+        header.site-header .container {
+          padding-left: 1.25rem;
+          padding-right: 1.25rem;
+        }
+
+        .site-header .hero-copy {
+          gap: 0.9rem;
+        }
+
+        .badge-open {
+          width: 100%;
+          justify-content: center;
+          text-align: center;
+        }
       }
  
       header.hero {
@@ -654,11 +701,13 @@
   <body>
     <header class="site-header">
       <div class="container">
-        <span class="badge-open">Secretaria de Administração - SAD • Prefeitura do Recife</span>
-        <h1 class="display-6 fw-semibold mt-3">Seleção Simplificada Hospital Veterinário do Recife</h1>
-        <p class="lead mt-2">
-          Inscrições abertas até 23:59:59 do dia 31 de outubro de 2025
-        </p>
+        <div class="hero-copy">
+          <span class="badge-open">Secretaria de Administração - SAD • Prefeitura do Recife</span>
+          <h1 class="site-header__title">Seleção Simplificada Hospital Veterinário do Recife</h1>
+          <p class="lead">
+            Inscrições abertas até 23:59:59 do dia 31 de outubro de 2025
+          </p>
+        </div>
       </div>
     </header>
     <!--<header class="hero">
