--- a/forminscricao.html
+++ b/forminscricao.html
@@ -52,9 +52,10 @@
       }
 
       header.site-header {
-        background: linear-gradient(135deg, rgba(0, 83, 164, 0.96), rgba(0, 58, 115, 0.88));
+        background: linear-gradient(90deg, #1a6dd9 0%, #1152ad 100%);
         color: #ffffff;
-        padding: 3.5rem 0 2.75rem;
+        padding: 2.75rem 0 2.25rem;
+        box-shadow: 0 12px 32px rgba(17, 82, 173, 0.25);
       }
 
       .hero-container {
@@ -62,11 +63,34 @@
         margin: 0 auto;
         padding-left: 1.5rem;
         padding-right: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0.65rem;
       }
 
       header .lead {
         color: rgba(255, 255, 255, 0.82);
         max-width: 720px;
+        margin: 0;
+      }
+
+      .badge-open {
+        display: inline-flex;
+        align-items: center;
+        gap: 0.5rem;
+        padding: 0.4rem 1.05rem;
+        border-radius: 999px;
+        background: rgba(255, 255, 255, 0.18);
+        font-size: 0.85rem;
+        font-weight: 600;
+        letter-spacing: 0.02em;
+      }
+
+      .site-header .display-6 {
+        font-size: 2rem;
+        font-weight: 700;
+        margin: 0;
       }
  
       header.hero {
@@ -648,6 +672,19 @@
       }
 
       @media (max-width: 992px) {
+        header.site-header {
+          padding: 2.3rem 0 1.75rem;
+        }
+
+        .site-header .display-6 {
+          font-size: 1.65rem;
+        }
+
+        .badge-open {
+          font-size: 0.8rem;
+          padding: 0.35rem 0.95rem;
+        }
+
         header.hero {
           height: 210px;
         }
@@ -660,6 +697,7 @@
         .hero-container {
           padding-left: 1.1rem;
           padding-right: 1.1rem;
+          gap: 0.5rem;
         }
 
         .wizard-shell {
@@ -709,7 +747,7 @@
   <body>
     <header class="site-header">
       <div class="container hero-container">
-        <span class="badge-open">Secretaria de Administração - SAD • Prefeitura do Recife</span>
+        <span class="badge-open">Secretaria de Administração - SAD - Prefeitura do Recife</span>
         <h1 class="display-6 fw-semibold mt-3">Seleção Simplificada Hospital Veterinário do Recife</h1>
         <p class="lead mt-2">
           Inscrições abertas até 23:59:59 do dia 31 de outubro de 2025
@@ -799,7 +837,7 @@
               <h3 class="section-title">Dados básicos</h3>
               <p class="section-subtitle">Informe seus dados pessoais conforme documento oficial.</p>
               <div class="row g-3">
-                <div class="col-md-4">
+                <div class="col-12 col-md-6 col-lg-6">
                   <label for="nome" class="form-label required">Nome completo</label>
                   <input
                     type="text"
@@ -808,9 +846,10 @@
                     name="nome"
                     value="{{ String($json.nome ?? $json.name ?? '').trim() || String($json.nome_social ?? $json.socialName ?? '').trim().toUpperCase() }}"
                     required
+                    readonly
                   />
                 </div>
-                <div class="col-md-4">
+                <div class="col-12 col-md-4 col-lg-4">
                   <label for="nome_social" class="form-label">Nome social</label>
                   <input
                     type="text"
@@ -820,7 +859,7 @@
                     value="{{ String($json.nome_social ?? $json.socialName ?? '').trim().toUpperCase() }}"
                   />
                 </div>
-                <div class="col-md-4">
+                <div class="col-12 col-md-2 col-lg-2">
                   <label for="cpf" class="form-label required">CPF</label>
                   <input
                     type="text"
@@ -834,9 +873,10 @@
                     data-numeric-only="true"
                     value="{{ String(($json.cpf ?? $json.preferred_username ?? '')).replace(/\D+/g, '').slice(0,11) }}"
                     required
+                    readonly
                   />
                 </div>
-                <div class="col-md-4">
+                <div class="col-12 col-md-4">
                   <label for="nasc" class="form-label required">Data de nascimento</label>
                   <input
                     type="date"
@@ -845,6 +885,7 @@
                     name="nasc"
                     value="{{ (($json.nasc ?? $json.dob) || '').split('/').reverse().join('-') }}"
                     required
+                    readonly
                   />
                 </div>
                 <div class="col-md-4">
