--- a/forminscricao.html
+++ b/forminscricao.html
@@ -52,15 +52,29 @@
       }
 
       header.site-header {
-        background:
-          linear-gradient(90deg, rgba(17, 82, 173, 0.88) 0%, rgba(11, 36, 71, 0.88) 100%),
-          url("https://statics.recife.pe.gov.br/images/dynamics/automacao/header.png?w=3000") center/cover no-repeat;
+        position: relative;
+        background: #0b2447;
+        background-image: url("https://statics.recife.pe.gov.br/images/dynamics/automacao/header.png?w=3000");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         color: #ffffff;
         padding: 2.75rem 0 2.25rem;
         box-shadow: 0 12px 32px rgba(17, 82, 173, 0.25);
+        overflow: hidden;
+      }
+
+      header.site-header::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        background: linear-gradient(90deg, rgba(17, 82, 173, 0.88) 0%, rgba(11, 36, 71, 0.88) 100%);
+        z-index: 0;
       }
 
       .hero-container {
+        position: relative;
+        z-index: 1;
         max-width: 1100px;
         margin: 0 auto;
         padding-left: 1.5rem;
