--- a/forminscricao.html
+++ b/forminscricao.html
@@ -1297,7 +1297,6 @@
                   <label for="nivel" class="form-label required">Nível</label>
                   <select id="nivel" name="nivel" class="form-select" data-prefill="{{ $json.nivel ?? $json.nivel_escolaridade ?? $json.escolaridade ?? '' }}" required>
                     <option value="">Selecione...</option>
-                    <option value="Fundamental">Fundamental</option>
                     <option value="Médio">Médio</option>
                     <option value="Técnico">Técnico</option>
                     <option value="Graduação">Graduação</option>
@@ -2152,6 +2151,7 @@
       const naturalidadeUfLabel = document.querySelector('label[for="naturalidade_uf"]');
       const ufSelects = Array.from(document.querySelectorAll('[data-uf-select]'));
       const generoSelect = document.getElementById('genero');
+      const nivelSelect = document.getElementById('nivel');
       const cargoSelect = document.getElementById('cargo');
       const cargosInscritosInput = document.getElementById('cargosInscritos');
       const especialidadeGroup = document.getElementById('especialidadeGroup');
@@ -2224,6 +2224,53 @@
           );
         });
 
+      const normalizeSimpleValue = (value) =>
+        String(value || '')
+          .normalize('NFD')
+          .replace(/[\u0300-\u036f]/g, '')
+          .replace(/[^a-zA-Z0-9]+/g, '')
+          .toLowerCase();
+
+      const getCargoCategory = (value) => {
+        const normalized = normalizeSimpleValue(value);
+        if (!normalized) return 'placeholder';
+        if (normalized.includes('analista')) return 'analista';
+        if (normalized.includes('tecnico')) return 'tecnico';
+        if (normalized.includes('auxiliar')) return 'auxiliar';
+        return 'other';
+      };
+
+      const cargoBaseOptions = cargoSelect
+        ? Array.from(cargoSelect.options).map((option) => ({
+            value: option.value,
+            label: option.textContent,
+            disabled: option.disabled,
+            hidden: option.hidden,
+            defaultSelected: option.defaultSelected,
+            category: getCargoCategory(option.value),
+          }))
+        : [];
+
+      const getNivelTier = (value) => {
+        const normalized = normalizeSimpleValue(value);
+        if (!normalized) return 'all';
+        if (
+          normalized === 'graduacao' ||
+          normalized === 'posgraduacao' ||
+          normalized === 'mestrado' ||
+          normalized === 'doutorado'
+        ) {
+          return 'graduacao';
+        }
+        if (normalized === 'tecnico') {
+          return 'tecnico';
+        }
+        if (normalized === 'medio' || normalized === 'fundamental') {
+          return 'auxiliar';
+        }
+        return 'auxiliar';
+      };
+
       const updateEspecialidadeOptions = () => {
         if (!cargoSelect || !especialidadeSelect || !especialidadeGroup) return;
         const selectedCargo = cargoSelect.value?.trim();
@@ -2234,11 +2281,14 @@
         especialidadeSelect.innerHTML = '';
         if (!matchingEntries.length) {
           especialidadeGroup.classList.add('d-none');
+          especialidadeSelect.required = false;
           especialidadeSelect.value = '';
           especialidadeSelect.dataset.currentValue = '';
+          especialidadeSelect.classList.remove('is-invalid');
           return;
         }
         especialidadeGroup.classList.remove('d-none');
+        especialidadeSelect.required = true;
         const placeholderOption = document.createElement('option');
         placeholderOption.value = '';
         placeholderOption.textContent = 'Selecione...';
@@ -2565,19 +2615,68 @@
       };
 
       const filterCargoOptions = () => {
-        if (!cargoSelect) return;
+        if (!cargoSelect || !cargoBaseOptions.length) return;
+        const previousValue = cargoSelect.value || '';
+        const previousNormalized = previousValue.trim().toUpperCase();
         const inscritos = parseCargosInscritos();
-        if (!inscritos.length) return;
         const allowedValue = cargoSelect.dataset.prefill?.trim().toUpperCase() || '';
         const bloqueados = new Set(inscritos.map((value) => value.toUpperCase()));
-        Array.from(cargoSelect.options).forEach((option) => {
-          const optionValue = option.value?.trim();
-          if (!optionValue) return;
-          const normalized = optionValue.toUpperCase();
-          if (bloqueados.has(normalized) && normalized !== allowedValue) {
-            option.remove();
+        const nivelValue = nivelSelect ? nivelSelect.value || nivelSelect.dataset.prefill : '';
+        const nivelTier = getNivelTier(nivelValue);
+        const filteredOptions = cargoBaseOptions.filter((option) => {
+          if (!option.value) {
+            return true;
           }
+          const normalized = option.value.trim().toUpperCase();
+          if (
+            bloqueados.size &&
+            bloqueados.has(normalized) &&
+            normalized !== allowedValue &&
+            normalized !== previousNormalized
+          ) {
+            return false;
+          }
+          if (nivelTier === 'all' || nivelTier === 'graduacao') {
+            return true;
+          }
+          if (nivelTier === 'tecnico') {
+            return option.category === 'tecnico' || option.category === 'auxiliar';
+          }
+          if (nivelTier === 'auxiliar') {
+            return option.category === 'auxiliar';
+          }
+          return true;
         });
+        cargoSelect.innerHTML = '';
+        filteredOptions.forEach((optionData) => {
+          const option = document.createElement('option');
+          option.value = optionData.value;
+          option.textContent = optionData.label;
+          option.disabled = optionData.disabled;
+          option.hidden = optionData.hidden;
+          if (optionData.defaultSelected && !optionData.value) {
+            option.selected = true;
+          }
+          cargoSelect.appendChild(option);
+        });
+        let targetValue = '';
+        if (filteredOptions.some((option) => option.value === previousValue)) {
+          targetValue = previousValue;
+        } else if (allowedValue) {
+          const allowedMatch = filteredOptions.find(
+            (option) => option.value?.trim().toUpperCase() === allowedValue,
+          );
+          if (allowedMatch) {
+            targetValue = allowedMatch.value;
+          }
+        }
+        cargoSelect.value = targetValue;
+        if (!targetValue && cargoSelect.options.length > 0) {
+          cargoSelect.selectedIndex = 0;
+        }
+        if ((cargoSelect.value || '') !== previousValue) {
+          cargoSelect.dispatchEvent(new Event('change'));
+        }
       };
 
       const resolveInitialAuthorization = () => {
@@ -3533,6 +3632,9 @@
         showSuccessFeedback();
       });
 
+      if (nivelSelect) {
+        nivelSelect.addEventListener('change', filterCargoOptions);
+      }
       if (cargoSelect) {
         cargoSelect.addEventListener('change', updateEspecialidadeOptions);
       }
