Use branded hero background image

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       }
 
       header.site-header {
-        background: linear-gradient(135deg, rgba(0, 83, 164, 0.96), rgba(0, 58, 115, 0.88));
+        background: url("https://statics.recife.pe.gov.br/images/dynamics/automacao/header.png?w=3000")
+          center/cover no-repeat;
         color: #ffffff;
         padding: 3.5rem 0 2.75rem;
       }
