--- a/forminscricao.html
+++ b/forminscricao.html
@@ -7,7 +7,7 @@
       rel="icon"
       href="https://statics.recife.pe.gov.br/images/dynamics/conecta/icons/favicon.png?w=32&amp;h=32&amp;fit=fill&amp;border=2,transparent,shrink"
     />
-    <title>Seleção Simplificada — Formulário</title>
+    <title>Seleção Simplificada HVR</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -53,7 +53,7 @@
 
       header.site-header {
         position: relative;
-        background: #0b2447;
+        background-color: #0b2447;
         background-image: url("https://statics.recife.pe.gov.br/images/dynamics/automacao/header.png?w=3000");
         background-size: cover;
         background-position: center;
@@ -68,7 +68,7 @@
         content: "";
         position: absolute;
         inset: 0;
-        background: linear-gradient(90deg, rgba(17, 82, 173, 0.88) 0%, rgba(11, 36, 71, 0.88) 100%);
+        background: linear-gradient(90deg, rgba(17, 82, 173, 0.72) 0%, rgba(11, 36, 71, 0.72) 100%);
         z-index: 0;
       }
 
@@ -114,6 +114,10 @@
         height: 240px;
         overflow: hidden;
         background-color: #0b2447;
+        background-image: url("https://statics.recife.pe.gov.br/images/dynamics/automacao/header.png?w=3000");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
       }
 
       header.hero::after {
