--- a/index.html
+++ b/index.html
@@ -1910,49 +1910,49 @@
 
                 linkEl.href = normalizedUrl;
 
-                var urlWithoutParams = normalizedUrl.split("#")[0].split("?")[0];
-                var extension = (urlWithoutParams.split(".").pop() || "").toLowerCase();
+                var urlWithoutFragment = normalizedUrl.split("#")[0];
+                var urlWithoutParams = urlWithoutFragment.split("?")[0];
+                var lastSlashIndex = urlWithoutParams.lastIndexOf("/");
+                var rawFileName = lastSlashIndex !== -1 ? urlWithoutParams.substring(lastSlashIndex + 1) : urlWithoutParams;
+                var lastDotIndex = rawFileName.lastIndexOf(".");
+                var extension = lastDotIndex !== -1 ? rawFileName.substring(lastDotIndex + 1).toLowerCase() : "";
+                var fileName = rawFileName || "publicacao";
                 var isPdf = extension === "pdf";
                 var isImage = ["png", "jpg", "jpeg", "gif", "bmp", "svg", "webp"].includes(extension);
 
+                var urlObject = null;
+                try {
+                  urlObject = new URL(normalizedUrl);
+                } catch (error) {
+                  urlObject = null;
+                }
+                var isSameOrigin = urlObject ? urlObject.origin === window.location.origin : false;
+
                 if (isPdf) {
                   linkEl.type = "application/pdf";
-                  var fileName = urlWithoutParams.substring(urlWithoutParams.lastIndexOf("/") + 1) || "publicacao.pdf";
-                  linkEl.rel = "noopener noreferrer";
-                  linkEl.target = "_self";
-                  linkEl.setAttribute("download", fileName);
 
-                  (function (urlToDownload, fileNameToUse) {
+                  if (isSameOrigin) {
+                    linkEl.target = "_self";
+                    linkEl.setAttribute("download", fileName || "publicacao.pdf");
                     linkEl.addEventListener("click", function (event) {
                       event.preventDefault();
-                      fetch(urlToDownload)
-                        .then(function (response) {
-                          if (!response.ok) {
-                            throw new Error("Falha ao baixar o arquivo PDF");
-                          }
-                          return response.blob();
-                        })
-                        .then(function (blob) {
-                          var blobUrl = URL.createObjectURL(blob);
-                          var tempLink = document.createElement("a");
-                          tempLink.href = blobUrl;
-                          tempLink.download = fileNameToUse;
-                          document.body.appendChild(tempLink);
-                          tempLink.click();
-                          document.body.removeChild(tempLink);
-                          setTimeout(function () {
-                            URL.revokeObjectURL(blobUrl);
-                          }, 1000);
-                        })
-                        .catch(function (error) {
-                          console.error(error);
-                          window.location.href = urlToDownload;
-                        });
+                      var tempLink = document.createElement("a");
+                      tempLink.href = normalizedUrl;
+                      tempLink.download = fileName || "publicacao.pdf";
+                      document.body.appendChild(tempLink);
+                      tempLink.click();
+                      document.body.removeChild(tempLink);
                     });
-                  })(normalizedUrl, fileName);
+                  } else {
+                    linkEl.target = "_blank";
+                    linkEl.rel = "noopener";
+                  }
+                } else if (isImage) {
+                  linkEl.target = "_blank";
+                  linkEl.rel = "noopener";
                 } else {
                   linkEl.target = "_blank";
-                  linkEl.rel = "noopener noreferrer";
+                  linkEl.rel = "noopener";
                 }
 
                 linkEl.appendChild(document.createTextNode(emoji + " " + entry.description));
