Atualiza email de atendimento eletrônico

--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
           <div class="col-md-4">
             <div class="p-4 bg-white rounded-4 border shadow-sm h-100">
               <h3 class="h6 text-uppercase text-secondary">Atendimento eletrônico</h3>
-              <p class="mb-1 fw-semibold">sad.selecao@recife.pe.gov.br</p>
+              <p class="mb-1 fw-semibold">sshvr.sad.selecao@recife.pe.gov.br</p>
               <p class="mb-0 text-muted">Resposta em até 2 dias úteis.</p>
             </div>
           </div>
