Restore new-tab behavior for PDF links

--- a/index.html
+++ b/index.html
@@ -579,19 +579,37 @@
           <article class="download-card">
             <strong>Modelo de Laudo Médico para Pessoas com Deficiência</strong>
             <p>Documento comprobatório exigido para candidatos que solicitam reserva de vagas PcD.</p>
-            <a class="link-primary" href="FORM%20MODELO%20DE%20LAUDO%20MÉDICO%20PARA%20PESSOAS%20COM%20DEFICIÊNCIA.pdf">Baixar modelo em PDF</a>
+            <a
+              class="link-primary"
+              href="FORM%20MODELO%20DE%20LAUDO%20MÉDICO%20PARA%20PESSOAS%20COM%20DEFICIÊNCIA.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Baixar modelo em PDF</a
+            >
           </article>
 
           <article class="download-card">
             <strong>Termo de Autodeclaração — Candidatos Negros (Preto e Pardo)</strong>
             <p>Assinatura obrigatória para candidatos que optarem pela reserva de vagas para pessoas negras.</p>
-            <a class="link-primary" href="FORM%20TERMO%20DE%20AUTODECLARAÇÃO%20DE%20CANDIDATOS%20NEGROS%20(PRETO%20E%20PARDO).pdf">Baixar termo em PDF</a>
+            <a
+              class="link-primary"
+              href="FORM%20TERMO%20DE%20AUTODECLARAÇÃO%20DE%20CANDIDATOS%20NEGROS%20(PRETO%20E%20PARDO).pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Baixar termo em PDF</a
+            >
           </article>
 
           <article class="download-card">
             <strong>Termo de Autodeclaração de Identidade Indígena (TADII)</strong>
             <p>Documento exigido para autodeclaração de pertencimento a povos indígenas.</p>
-            <a class="link-primary" href="FORM%20TERMO%20DE%20AUTODECLARAÇÃO%20DE%20IDENTIDADE%20INDÍGENA%20-%20TADII.pdf">Baixar termo em PDF</a>
+            <a
+              class="link-primary"
+              href="FORM%20TERMO%20DE%20AUTODECLARAÇÃO%20DE%20IDENTIDADE%20INDÍGENA%20-%20TADII.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Baixar termo em PDF</a
+            >
           </article>
         </div>
       </section>
@@ -1913,8 +1931,6 @@
                 linkEl.href = normalizedUrl;
 
                 if (normalizedUrl.split("?")[0].toLowerCase().endsWith(".pdf")) {
-                  linkEl.removeAttribute("target");
-                  linkEl.removeAttribute("rel");
                   linkEl.type = "application/pdf";
                 }
 
